# pyumlify

./: .gitignore  README.md  pyproject.toml  requirements.txt  setup.py
pyumlify/: cli.py  generate.py
tests/: conftest.py  test_cli.py  test_generate.py
tests/fixtures/: requirements.txt  sample.py
